debug: Atualizar Gerenciar regras ao mudar por outra hub e style datalist

--- a/analisador/templates/analisador/relatorio.html
+++ b/analisador/templates/analisador/relatorio.html
@@ -108,7 +108,7 @@
                                 <th>Data</th>
                                 <th>Remetente/Destinatário</th>
                                 <th class="text-end">Valor</th>
-                                <th style="width: 30%;">Ação Rápida Individual</th>
+                                <th style="width: 30%;">Categoria</th>
                             </tr>
                         </thead>
                         <tbody>
