--- a/analisador/templates/analisador/gerenciar_regras.html
+++ b/analisador/templates/analisador/gerenciar_regras.html
@@ -40,7 +40,7 @@
     <div class="card shadow-sm mb-4">
         <div class="card-header"><h5 class="card-title mb-0"><i class="bi bi-funnel"></i> Filtros</h5></div>
         <div class="card-body">
-            <form method="GET" action="{% url 'gerenciar_regras' %}" class="row g-3 align-items-center">
+            <form method="GET" action="{% url 'gerenciar_regras' %}" class="row g-3 align-items-end">
                 <div class="col-md-10">
                     <label for="categoria_filtro" class="form-label">Filtrar por Categoria:</label>
                     <select name="categoria_filtro" id="categoria_filtro" class="form-select">
@@ -52,7 +52,7 @@
                         {% endfor %}
                     </select>
                 </div>
-                <div class="col-md-2 d-flex align-items-end">
+                <div class="col-md-2">
                     <button type="submit" class="btn btn-info w-100">Filtrar</button>
                 </div>
             </form>
